Ispravljene slovne greske

--- a/Dokumentacija/Faza2/Prototip/kreiranjeObjave.html
+++ b/Dokumentacija/Faza2/Prototip/kreiranjeObjave.html
@@ -62,7 +62,7 @@
 
         <div class="content-space">
             <div class="content-space-text">
-                <h4>Sadrzaj<span style="color: red;">*</span></h4>
+                <h4>Sadržaj<span style="color: red;">*</span></h4>
             </div>
             <textarea rows="10" cols="150" required></textarea>
         </div>
@@ -72,11 +72,11 @@
                 <h4>Glavni tag<span style="color: red;">*</span></h4>
             </div>
             <select class="tag-type-dropdown-bar">
-                <option>Istorijska licnost</option>
+                <option>Istorijska ličnost</option>
                 <option>Spomenik</option>
                 <option>Crkva/manastir</option>
                 <option>Tvrdjava</option>
-                <option>Arheolosko nalaziste</option>
+                <option>Arheološko nalazište</option>
                 <option>Park prirode</option>
             </select>
             <select class="tag-dropdown-bar">
@@ -96,11 +96,11 @@
 
                 <div class="seconadry-tag">
                     <select class="tag-type-dropdown-bar">
-                        <option>Istorijska licnost</option>
+                        <option>Istorijska ličnost</option>
                         <option>Spomenik</option>
                         <option>Crkva/manastir</option>
                         <option>Tvrdjava</option>
-                        <option>Arheolosko nalaziste</option>
+                        <option>Arheološko nalazište</option>
                         <option>Park prirode</option>
                     </select>
                     <select class="tag-dropdown-bar">
@@ -143,7 +143,7 @@
         </div>
 
         <div class="submit-button-space">
-            <button class="btn btn-primary btn-lg button-submit-objava" type="submit">Okaci objavu</button>
+            <button class="btn btn-primary btn-lg button-submit-objava" type="submit">Okači objavu</button>
         </div>
 
         <div class="cancel-button-space">
