--- a/Dokumentacija/Faza2/Prototip/kreiranjeReklame.html
+++ b/Dokumentacija/Faza2/Prototip/kreiranjeReklame.html
@@ -56,14 +56,14 @@
 
         <div class="description-space">
             <div class="description-space-text">
-                <h4>Opis vase radnje</h4>
+                <h4>Opis vaše radnje</h4>
             </div>
             <textarea rows="10" cols="150"></textarea>
         </div>
 
         <div class="address-space">
             <div class="address-space-text">
-                <h4>Adresa vase radnje<span style="color: red;">*</span></h4>
+                <h4>Adresa vaše radnje<span style="color: red;">*</span></h4>
             </div>
             <input type="text" size="30" placeholder="Vasa adresa" required>
         </div>
@@ -85,13 +85,13 @@
 
         <div class="personal-site-space">
             <div class="personal-site-space-text">
-                <h4>Link ka vasem sajtu</h4>
+                <h4>Link ka vašem sajtu</h4>
             </div>
-            <input type="text" size="30" placeholder="Link ka vasem sajtu">
+            <input type="text" size="30" placeholder="Link ka vašem sajtu">
         </div>
 
         <div class="submit-button-space">
-            <button class="btn btn-primary btn-lg button-submit-objava" type="submit">Okaci reklamu</button>
+            <button class="btn btn-primary btn-lg button-submit-objava" type="submit">Okači reklamu</button>
         </div>
         
         <div class="cancel-button-space">
