--- a/Dokumentacija/Faza2/Prototip/listaReklama.html
+++ b/Dokumentacija/Faza2/Prototip/listaReklama.html
@@ -65,11 +65,11 @@
                     </div>
                     <div id="div4" style="float:left; margin-left: 10px;
                     margin-bottom: 10px">
-                    <p float="right">Username</p>
+                    <p float="right">autor</p>
                     </div>
           
           <div class="d-flex w-100 justify-content-between">
-            <h5 class="mb-1">Card title</h5>
+            <h5 class="mb-1">Reklama 1</h5>
             <small>3 days ago</small>
           </div>
           <div>
@@ -87,11 +87,11 @@
                 </div>
                 <div id="div8" style="float:left; margin-left: 10px;
                 margin-bottom: 10px">
-                <p float="right">Username</p>
+                <p float="right">autor</p>
                 </div>
            
           <div class="d-flex w-100 justify-content-between">
-            <h5 class="mb-1">Card title</h5>
+            <h5 class="mb-1">Reklama 2</h5>
             <small class="text-muted">3 days ago</small>
           </div>
           <p class="mb-1">Donec id elit non mi porta gravida at eget metus. Maecenas sed diam eget risus varius blandit.</p>
@@ -105,10 +105,10 @@
                 </div>
                 <div id="div10" style="float:left; margin-left: 10px;
                 margin-bottom: 10px">
-                <p float="right">Username</p>
+                <p float="right">autor</p>
                 </div>
           <div class="d-flex w-100 justify-content-between">
-            <h5 class="mb-1">Card title</h5>
+            <h5 class="mb-1">Reklama 3</h5>
             <small class="text-muted">3 days ago</small>
           </div>
           <p class="mb-1">Donec id elit non mi porta gravida at eget metus. Maecenas sed diam eget risus varius blandit.</p>
