--- a/Dokumentacija/Faza2/Prototip/objavaOdobravanje.html
+++ b/Dokumentacija/Faza2/Prototip/objavaOdobravanje.html
@@ -53,9 +53,9 @@
             <div class="objava">
                 
                 <img src="./assets/images/img_avatar.png" alt="Profile picture" class="imgclass">
-                        <a href="#" class="card-link author-link">Username</a>
+                        <a href="#" class="card-link author-link">autor</a>
                         <p class="card-date">21.3.2022.</p>
-                <h1>Card title</h1>
+                <h1>Naslov objave</h1>
                 
 
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore illum libero in voluptatem possimus ratione excepturi perferendis voluptas nihil accusamus pariatur quasi iusto atque quod facilis, fuga deserunt? Doloribus quas quo voluptatem at nulla, dignissimos quae omnis vitae commodi, ipsam vero explicabo voluptate voluptas iure eum aut nisi nesciunt vel!</p>
