--- a/Dokumentacija/Faza2/Prototip/registrovanje.html
+++ b/Dokumentacija/Faza2/Prototip/registrovanje.html
@@ -265,7 +265,7 @@
               <div class="form-check">
                 <input class="form-check-input" type="radio" name="usertype" id="tekstopisac" value="tekstopisac" >
                 <label class="form-check-label" for="tekstopisac">
-                  Tekstopisac
+                  Pisac
                 </label>
               </div>
               <div class="form-check">
