--- a/Dokumentacija/Faza2/Prototip/reklamaOdobravanje.html
+++ b/Dokumentacija/Faza2/Prototip/reklamaOdobravanje.html
@@ -52,7 +52,7 @@
             <div class="col-md-8 col-sm-12 objava">
                     
                 <img src="./assets/images/img_avatar.png" alt="Profile picture" class="imgclass">
-                        <a href="#" class="card-link author-link">Username</a>
+                        <a href="#" class="card-link author-link">autor</a>
                         <p class="card-date">21.3.2022.</p>
                 <h1>Naziv radnje</h1>
                 
