--- a/Dokumentacija/Faza2/Prototip/ulogovaniAdmin.html
+++ b/Dokumentacija/Faza2/Prototip/ulogovaniAdmin.html
@@ -82,7 +82,7 @@
                 <div class="card mb-4">
                     <div class="card-body">
                         <a href="#" class="card-title"><div>
-                            <h3>Card title</h3>
+                            <h3>Naslov objave</h3>
                             </div>
                             <div style="float:right">
                                 <form method="get" action="brisanjeObjave.html">
@@ -111,7 +111,7 @@
                 <div class="card mb-4">
                     <div class="card-body">
                         <a href="#" class="card-title"><div>
-                            <h3>Card title</h3>
+                            <h3>Naslov objave</h3>
                             </div>
                             <div style="float:right">
                                 <form method="get" action="brisanjeObjave.html">
@@ -140,7 +140,7 @@
                 <div class="card mb-4">
                     <div class="card-body">
                         <a href="#" class="card-title"><div>
-                            <h3>Card title</h3>
+                            <h3>Naslov objave</h3>
                             </div>
                             <div style="float:right">
                                 <form method="get" action="brisanjeObjave.html">
@@ -171,7 +171,7 @@
                 <div class="card mb-4">
                     <div class="card-body">
                         <a href="#" class="card-title"><div>
-                            <h3>Card title</h3>
+                            <h3>Naslov objave</h3>
                             </div>
                             <div style="float:right">
                                 <form method="get" action="brisanjeObjave.html">
@@ -201,7 +201,7 @@
                 <div class="card mb-4">
                     <div class="card-body">
                         <a href="#" class="card-title"><div>
-                            <h3>Card title</h3>
+                            <h3>Naslov objave</h3>
                             </div>
                             <div style="float:right">
                                 <form method="get" action="brisanjeObjave.html">
@@ -231,7 +231,7 @@
                 <div class="card mb-4">
                     <div class="card-body">
                         <a href="#" class="card-title"><div>
-                            <h3>Card title</h3>
+                            <h3>Naslov objave</h3>
                             </div>
                             <div style="float:right">
                                 <form method="get" action="brisanjeObjave.html">
@@ -262,7 +262,7 @@
                 <div class="card mb-4">
                     <div class="card-body">
                         <a href="#" class="card-title"><div>
-                            <h3>Card title</h3>
+                            <h3>Naslov objave</h3>
                             </div>
                             <div style="float:right">
                                 <form method="get" action="brisanjeObjave.html">
@@ -292,7 +292,7 @@
                 <div class="card mb-4">
                     <div class="card-body">
                         <a href="#" class="card-title"><div>
-                            <h3>Card title</h3>
+                            <h3>Naslov objave</h3>
                             </div>
                             <div style="float:right">
                                 <form method="get" action="brisanjeObjave.html">
