--- a/Dokumentacija/Faza2/Prototip/podesavanje.html
+++ b/Dokumentacija/Faza2/Prototip/podesavanje.html
@@ -1,5 +1,3 @@
-<!-- by Antonija Vasiljević -->
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -20,10 +18,10 @@
 </head>
 <body style=" background-color: #f1ebeb">
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
-        <a class="navbar-brand" href="./index.html">
+        <a class="navbar-brand" href="#">
             <img src="./assets/images/logo/PSI-ES-Logo-Transparent.png" width="30" height="30" alt="">
         </a>
-        <a class="navbar-brand" href="./index.html">Explore Serbia</a>
+        <a class="navbar-brand" href="#">Explore Serbia</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -33,11 +31,7 @@
 
             </ul>
             
-            <form method="get" action="kreiranjeObjave.html">
-                <button class="btnAdm" ><i class="fa fa-plus" aria-hidden="true"></i></button>
-           </form>
             <button class="btnAdm" disabled><i class="fa fa-cogs"></i></button> 
-            <a href="index.html" style="margin-left: 10px;">Izloguj se</a>
         </div>
     </nav>
     
@@ -56,6 +50,9 @@
                accept="image/png, image/jpeg">
                <br>
         Lozinka: <input  type="password" required maxlength="12" minlength="5" value="password"
+        style="margin-bottom: 10px;">
+        <br>
+        Potvrda lozinke: <input  type="password" required maxlength="12" minlength="5" 
         style="margin-bottom: 10px;">
         <br>
         E-Mail: <input type="email" value="jjovanovic90@gmail.com" style="margin-bottom: 10px; margin-left: 10px;">
@@ -252,6 +249,10 @@ Opština: <select name="municipality" id="municiplaity" >
    <br>
     <div id="odobri0" style="text-align: center;">
         <button type="button" class="btn btn-primary btn-lg">Potvrdi izmene</button>
+    </div>
+    <br>
+    <div id="obrisi0" style="text-align: center;">
+        <button type="button" class="btn btn-danger btn-lg">Obriši nalog</button>
     </div>
 </body>
 </html>
