Dodata forma za potvrdu brisanja svog profila

--- a/Dokumentacija/Faza2/Prototip/podesavanje.html
+++ b/Dokumentacija/Faza2/Prototip/podesavanje.html
@@ -1,3 +1,5 @@
+<!-- by Antonija Vasiljević -->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -252,7 +254,7 @@ Opština: <select name="municipality" id="municiplaity" >
     </div>
     <br>
     <div id="obrisi0" style="text-align: center;">
-        <button type="button" class="btn btn-danger btn-lg">Obriši nalog</button>
+        <a href="./brisanjeProfila.html" class="btn btn-danger btn-lg">Obriši nalog</a></a>
     </div>
 </body>
 </html>
