Dodate stranice: profil pisca i profil zanatlije

--- a/Dokumentacija/Faza2/Prototip/ulogovaniKorisnik.html
+++ b/Dokumentacija/Faza2/Prototip/ulogovaniKorisnik.html
@@ -58,6 +58,9 @@
             <form method="get" action="kreiranjeObjave.html">
                 <button class="btnAdm" ><i class="fa fa-plus" aria-hidden="true"></i></button>
            </form>
+           <form method="get" action="profilPisac.html">
+            <button  class="btnAdm"><i class="fa fa-user" aria-hidden="true"></i></button>
+            </form>
             <form method="get" action="podesavanje.html">
         
            
