Dodato Odustani dugme u okviru potvrde brisanja profila

--- a/Dokumentacija/Faza2/Prototip/brisanjeProfila.html
+++ b/Dokumentacija/Faza2/Prototip/brisanjeProfila.html
@@ -46,6 +46,9 @@
                 style="margin-bottom: 10px; margin: auto">
             </div>
             <br>
+			<div id="obrisi0" style="text-align: center;">
+                <a href="./podesavanje.html" class="btn btn-info btn-lg" style="margin-bottom: 10px;">Odustani</a></a>
+            </div>
             <div id="obrisi0" style="text-align: center;">
                 <a href="./profilUspesnoObrisan.html" class="btn btn-danger btn-lg">Obriši nalog</a></a>
             </div>
