Ispravljene greske naznacene u izvestaju sa defektima - defekat 40.

--- a/Dokumentacija/Faza2/Prototip/kreiranjeReklame.html
+++ b/Dokumentacija/Faza2/Prototip/kreiranjeReklame.html
@@ -54,6 +54,13 @@
             <input type="text" size="30" placeholder="Naziv radnje" required>
         </div>
 
+        <div class="picture-space">
+            <div clas="piscture-space-text">
+                <h4>Slika radnje</h4>
+            </div>
+            <input type="text" size="46" placeholder="Slika (URL)">
+        </div>
+
         <div class="description-space">
             <div class="description-space-text">
                 <h4>Opis vaše radnje</h4>
