Ispravljen SSU i prototip za kreiranje reklame - dodato polje za lokaciju radnje

--- a/Dokumentacija/Faza2/Prototip/kreiranjeReklame.html
+++ b/Dokumentacija/Faza2/Prototip/kreiranjeReklame.html
@@ -54,6 +54,13 @@
             <input type="text" size="30" placeholder="Naziv radnje" required>
         </div>
 
+        <div class="region-space">
+            <div class="region-space-text">
+                <h4>Region<span style="color: red;">*</span></h4>
+            </div>
+            <input type="text" size="30" placeholder="Region" required>
+        </div>
+        
         <div class="picture-space">
             <div clas="piscture-space-text">
                 <h4>Slika radnje</h4>
